web-infras/parser/tests/fixtures/esprima/ES6/for-of/invalid-var-init/output.txt
[SyntaxError]: 'for-of' loop variable declaration may not have an initializer. (1,14)
1|for (var x = 1 of y);
 |            ^
